# pre-commit-text

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CITATION.cff  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: codeql-analysis.yml  continous-integration.yml  create-release.yml  pre-commit-update.yml
pre_commit_text/: __init__.py  format_yaml.py  replace_tabs.py  search_replace.py
tests/: format_yaml_test.py  replace_tabs_test.py  search_replace_test.py
