[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pre_commit_text"
description = "Some text hooks for pre-commit."
authors = [{ name = "Raphael Boidol", email = "pre-commit@boidol.dev" }]
urls = { "Respository" = "https://github.com/boidolr/pre-commit-text" }
license = { file = "LICENSE" }
readme = "README.md"
version = "1.2.19"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]

requires-python = ">=3.10,<4"
dependencies = ["ruamel.yaml==0.18.16"]

[dependency-groups]
dev = ["ruff", "ty", "tox", "tox-uv"]
tests = ["pytest", "pytest-clarity", "pytest-ruff", "pytest-ty"]

[project.scripts]
format-yaml = "pre_commit_text.format_yaml:main"
search-replace = "pre_commit_text.search_replace:main"
replace-tabs = "pre_commit_text.replace_tabs:main"

[tool.setuptools]
packages = ["pre_commit_text"]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = ["D", "T201"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false

[tool.pytest.ini_options]
addopts = ["--ty", "--ruff"]
testpaths = ["tests", "pre_commit_text"]
filterwarnings = ["error"]

[tool.coverage.run]
core = "sysmon"

[tool.tox]
requires = ["tox>=4.31.0", "tox-uv>=1.29.0"]
envlist = ["py310", "py311", "py312", "py313", "py314", "py314t", "pre-commit", "static"]
isolated_build = true

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["pytest", { replace = "posargs", default = [], extend = true }]]
dependency_groups = ["tests"]
runner = "uv-venv-lock-runner"
uv_sync_flags = ["--no-editable"]

[tool.tox.env.pre-commit]
description = "run commit hooks on code base"
skip_install = true
deps = ["prek"]
commands = [["prek", "run", "--all-files"]]
runner = "virtualenv"

[tool.tox.env.static]
commands = [["pytest", "--ignore", "tests"]]
